<resources>
    <string name="app_name">seasonal</string>
    <string name="login_email">adresse mail</string>
    <string name="login_password">Mot de passe</string>
    <string name="login_submit">Connexion</string>
    <string name="login_sign_in">s\'inscrire à seasonal</string>
    <string name="error_login">Probleme de connexion ? </string>
    <string name="login_miss_input">Les champs email et mot de passe son obligatoire</string>
    <string name="login_error_request">Une erreur est survenue veuillez réessayer plus tard merci !</string>
    <string name="title_activity_candidate_list_fragmentmain">
        CandidateListFragmentactivityMainActivity
    </string>
    <string name="tab_candidate_list">Liste</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_candiddate_detail">Détail</string>
    <string name="candidate_search_at">Je recherche un saisonnier à partir du</string>
    <string name="title_activity_login_manager">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="login_fragment_tab_entreprise">Entreprise</string>
    <string name="login_fragment_tab_candidate">Saisonnier</string>
    <string name="navigation_bar_profile">Profile</string>
    <string name="navigation_bar_dashboard">Dashboard</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="candidate_detail_contact">Contact</string>
    <string name="title_activity_navigation_bar">NavigationBarActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profil_label_adresse">Adresse mail</string>
    <string name="profil_label_adresse_postal">Adresse postale</string>
    <string name="profil_label_domaine">Domaine de mon entreprise</string>
    <string name="candidate_detail_contact1">Contact</string>
    <string name="registerFirstName">Prénom</string>
    <string name="registerLastName">Nom</string>
    <string name="registrationEmail">Adresse mail</string>
    <string name="registerPassword">Entrer mot de passe</string>
    <string name="registerPasswordConfirmation">Valider mot de passe</string>
    <string name="registerEditCity">Entrer la ville de votre lieu de travail</string>
    <string name="registerCandidateDomainTitle">Type de jobs</string>
    <string name="registerCandidateDomainHint">Entrer le ou les domaines de votre établissement</string>
    <string name="registerCandidateExperience">Mon expérience</string>
    <string name="registerCandidateDisponibility">Je recherche un job à partir du</string>
    <string name="registerCandidateSalary">Prétentions salariales</string>
    <string name="registerCandidateEuro">€</string>
    <string name="registerCandidateSalaryBrut">bruts</string>
    <string name="registrationCandidateExperienceUnit">Année(s)</string>
    <string name="validationEmailWrong">Veuillez remplir un email valide</string>
    <string name="validationWrong">Veuillez remplir le</string>
    <string name="baseDateInput">--/--</string>
    <string name="validationFormError">Erreur lors de l\'enregistrement</string>
    <string name="registerCandidateReviewLabelIdentity">Je suis</string>
    <string name="registerCandidateReviewLabelLocation">J\'habite à</string>
    <string name="registerCandidateReviewLabelJob">Je recherche un job à partir \n du</string>
    <string name="candidate_detail_edit_button">modifier</string>
    <string name="login_password_hint">entrez votre mot de passe</string>
    <string name="login_email_hint">entrez votre adresse mail</string>
    <string name="register_breadcrumb_step1">Perso</string>
    <string name="register_breadcrumb_step2">Pro</string>
    <string name="register_breadcrumb_step3">Validation</string>
    <string name="registerCandidateReviewAvailable">Je recherche un job à partir du</string>
</resources>
